# jira-daily-pm-radar

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  LICENSE  README.md  SECURITY.md  package.json  pyproject.toml  skills.sh.json
.github/workflows/: ci.yml
.serena/: project.yml
scripts/: bootstrap.ps1  bootstrap.sh  check_no_secrets.py  install.ps1  install.sh  setup.ps1  setup.sh
skills/jira-daily-pm-radar/: SKILL.md  metadata.json
skills/jira-daily-pm-radar/assets/: daily-report-template.html
skills/jira-daily-pm-radar/config/: statuses.yaml
skills/jira-daily-pm-radar/examples/: sample-action-list.json  sample-report.html  sample-signals.json  sample-summary.md
skills/jira-daily-pm-radar/references/: 00-agent-navigation.md  01-data-model.md  02-signal-catalog.md  03-output-contract.md  04-investigation-playbook.md  mcp_config_template.json
skills/jira-daily-pm-radar/scripts/: README.md
src/jira_daily_pm_radar/: __init__.py  analyzer.py  cli.py  config.py  jira_client.py  mcp_server.py  mock_data.py  models.py  normalizer.py  radar.py  report.py  time_utils.py
src/jira_daily_pm_radar/assets/: report-style.css  slack-summary-template.md
src/jira_daily_pm_radar/config/: fields.yaml  labels.yaml  rules.yaml  status_thresholds.yaml
tests/: test_analyzer.py  test_normalizer.py  test_report.py
