[project]
name = "jira-daily-pm-radar"
version = "0.1.0"
description = "Daily PM radar for Jira: changes, stuck sprint work, backlog smells, poor issue hygiene, and HTML reports."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Artem Letyushev" }
]
keywords = ["jira", "project-management", "ai-agent", "skills", "mcp", "backlog", "scrum"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27.0",
  "jinja2>=3.1.4",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.2",
  "rich>=13.7.1",
  "typer>=0.12.3",
  "tzdata>=2024.1",
]

[project.optional-dependencies]
mcp = ["mcp>=1.2.0"]
dev = [
  "bandit[toml]>=1.7.9",
  "detect-secrets>=1.5.0",
  "mypy>=1.10.0",
  "pip-audit>=2.7.3",
  "pre-commit>=3.7.1",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.5.0",
  "types-PyYAML>=6.0.12.20240808",
]

[project.urls]
Repository = "https://github.com/letya999/jira-daily-pm-radar"
Issues = "https://github.com/letya999/jira-daily-pm-radar/issues"

[project.scripts]
jira-radar = "jira_daily_pm_radar.cli:app"
jira-radar-mcp = "jira_daily_pm_radar.mcp_server:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jira_daily_pm_radar"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "ASYNC", "S", "T20"]
ignore = [
  "S101",  # asserts are ok in tests
  "S603",  # subprocess calls in security tooling docs/tests are expected
  "B008",  # typer.Option/Argument defaults are the standard Typer pattern
  "E501",  # long strings in reports/templates are acceptable
  "UP047",  # keep Python 3.12-compatible generic syntax
  "RUF001", # Russian text in PM-facing strings is intentional
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"scripts/check_no_secrets.py" = ["T20"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
warn_return_any = false
no_implicit_optional = true
namespace_packages = true
mypy_path = "src"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]

[tool.detect-secrets]
baseline = ".secrets.baseline"
